--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+reports
 
 # Runtime data
 pids
@@ -71,6 +72,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+cypress.env.json
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
